Minor tweaks to the Jenkinsfile