@@ -1,18 +1,18 @@
 pipeline {
-    agent label:"docker", docker: "maven:3.3.9-jdk-7"
+    agent label:"docker", docker: "maven:3.3.9-jdk-8"
 
     environment {
-      MAVEN_OPTS = "-XX:MaxPermSize=256m -Xmx1024m"
+      MAVEN_OPTS = "-Xmx1024m"
     }
 
     stages {
         stage("Build") {
-            sh 'mvn clean install -Dmaven.test.failure.ignore=true'
+            sh 'mvn clean install -B -Dmaven.test.failure.ignore=true'
         }
     }
 
     postBuild {
-        always {
+        success {
             archive "**/target/**/*.jar"
             junit '**/target/surefire-reports/*.xml'
         }
